--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,9 +36,10 @@ logging.level.org.springframework.web.cors=DEBUG
 # configuração do email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=contratanti@gmail.com
-spring.mail.password=ewda kfpz pbrk wytq
+spring.mail.username=cyberbytesunc@gmail.com
+spring.mail.password=cinm bbhs hgae zldw
 spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
